align recipepage correctly implement components

--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,16 @@ p {
 }
 
 .border {
-  border: 1px solid rgb(232, 145, 13);;
+  border: 1px solid rgb(232, 145, 13);
   border-radius: 5px;
-  color: rgb(223, 138, 10);
+  color: rgb(232, 145, 13);
   margin-bottom: 20px;
+}
+
+.tips {
+  border: 1px solid rgb(232, 145, 13);
+  border-radius: 5px;
+  color: rgb(232, 145, 13);
 }
 
 legend {
@@ -83,15 +89,31 @@ ul {
   text-align: center;
 }
 
-.infoColumn {
+.page {
   break-before: always;
   display: flex;
   margin: 30px;
-  width: 250px;
 }
 
-h4 {
+.leftColumn {
+  font-family: montserrat;
+  width: 350px;
+  margin-right: 30px;
+}
+
+.quantity {
   display:flex;
   justify-content: center;
   margin:auto;
+  color: rgb(232, 145, 13);
+}
+
+.note {
+  font-size: 12px;
+}
+
+.rightColumn {
+  border: 2px solid black;
+  max-height: 100%;
+  width:80%;
 }
